--- a/src/components/navWrapper/navWrapper.module.scss
+++ b/src/components/navWrapper/navWrapper.module.scss
@@ -1,6 +1,10 @@
-.navWrapper{
-    width: 20%;
-    display: flex;
-    flex-direction: column;
-    height: 100%;
+.navWrapper {
+  width: 20%;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  transition: 200ms;
+}
+.open {
+  width: 40%;
 }
