adding new Types, creating new Contexts, new pages

--- a/src/components/NavigationHome/navHome.module.scss
+++ b/src/components/NavigationHome/navHome.module.scss
@@ -1,6 +1,6 @@
 .navHome {
   background-color: var(--main_backgroundColor);
-  height: 110px;
+  min-height: 110px;
   display: flex;
   justify-content: left;
   align-items: center;
@@ -14,11 +14,12 @@
     height: 60%;
     width: 100%;
 
-    a {
+    span {
       font-size: 1.1em;
       display: flex;
       align-items: center;
       position: relative;
+      cursor: pointer;
 
       &:first-child::after {
         content: "Início";
